--- a/pom.xml
+++ b/pom.xml
@@ -86,10 +86,10 @@
 			<version>1.r.60</version>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.apache.axis</groupId>
