--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,5 +10,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d %5p [%t] - %m%n
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %5p [%t] - %m%n
-log4j.appender.file.File=D:/lynn/log.log4j
+log4j.appender.file.File=D:/Lynn/log.log4j
 log4j.appender.file.ImmediateFlush=true
