Nutz修复版本问题

--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.nutz</groupId>
             <artifactId>nutz</artifactId>
-            <version>1.r.60</version>
+            <version>1.b.48</version>
         </dependency>
 
         <!--<dependency>
